Add mano grammar to all projects.